--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "react-dom": "^18.2.0",
     "react-favicon": "^1.0.1",
     "react-icons": "^4.6.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
