--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-slideshow-image": "^4.0.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.4.4",
+    "tw-elements": "^1.0.0-alpha12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
